# embedded-rust-stm32g4-launchpad

./: .gitignore  Cargo.toml  LICENSE  README.md
.zed/: settings.json
archive/blinky_cs/: Cargo.toml  todo.md
archive/blinky_cs/src/: imports.rs  main.rs
archive/clocks/: Cargo.toml  Clocks.md
archive/clocks/src/: imports.rs
blinky/: Cargo.toml  todo.md
blinky/src/: imports.rs  main.rs
blinky_rtc/: Cargo.toml
blinky_rtc/src/: imports.rs  main.rs
clocks/src/: main.rs
i2c/: Cargo.toml  I2C.md  ISM330DHCX.md  ISM330DHCX_registers.md
i2c/src/: imports.rs  main.rs
minimal/: Cargo.toml
minimal/.cargo/: config.toml
minimal/src/: main.rs
modules/blinky/: Cargo.toml
modules/blinky/.cargo/: config.toml
modules/blinky/src/: imports.rs  main.rs
modules/minimal/: Cargo.toml  memory.x
modules/minimal/.cargo/: config.toml
modules/minimal/src/: main.rs
