[package]
name = "embeddedrust_launchpad_module_minimal"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-stm32 = { version = "0.5.0", features = ["defmt", "memory-x", "stm32g474re", "single-bank", "time-driver-any", "exti"] }
embassy-time = "0.5.0"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
critical-section = "1.2.0"
